objects/Invoice__c.object
<CustomObject>
    <label>Invoice</label>
    <nameField>
        <displayFormat>PO-{0000}</displayFormat>
        <label>PO number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Email_Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sended</fullName>
                </value>
                <value>
                    <fullName>Not_sended</fullName>
                    <default>true</default>
                    <label>Not_sended</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing_contact_name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EmailId__c</fullName>
        <formula>Account_name__r.email_id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EmailId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_date__c</fullName>
        <label>Bill_date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>Account_name__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account_ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>total_cost__c</fullName>
        <label>total_cost</label>
        <summarizedField>Invoice_line__c.Rate__c</summarizedField>
        <summaryForeignKey>Invoice_line__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BillingCity__c</fullName>
        <formula>Account_name__r.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing__city</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account_name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_state__c</fullName>
        <formula>Account_name__r.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing_state</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_street__c</fullName>
        <formula>Account_name__r.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing_street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_country__c</fullName>
        <formula>Account_name__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing_country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_postal_code__c</fullName>
        <formula>Account_name__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing_postal_code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_notes_text__c</fullName>
        <label>Reference_notes_text</label>
        <type>TextArea</type>
    </fields>
</CustomObject>